--- a/Back-End/package.json
+++ b/Back-End/package.json
@@ -22,6 +22,9 @@
     "express": "^4.18.2",
     "express-winston": "^4.2.0",
     "mysql2": "^3.0.1",
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.28.0",
+    "sequelize-typescript": "^2.1.5",
     "winston": "^3.8.2"
   },
   "devDependencies": {
@@ -30,7 +33,10 @@
     "@types/debug": "^4.1.7",
     "@types/express": "^4.17.15",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/node": "^18.11.18",
+    "@types/validator": "^13.7.10",
     "jsonwebtoken": "^9.0.0",
+    "sequelize-cli": "^6.5.2",
     "source-map-support": "^0.5.21",
     "tslint": "^6.1.3",
     "typescript": "^4.9.4"
