--- a/Back-End/package.json
+++ b/Back-End/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "jest",
     "start": "tsc && node --unhandled-rejections=strict -r dotenv/config ./dist/infrastructure/apis/app/app.js",
-    "debug": "export DEBUG=* && npm run start",
+    "debug": "set DEBUG=* && npm run start",
     "migrations": "tsc && npx sequelize db:create && npx sequelize db:migrate",
     "mocks": "tsc && node ./dist/infrastructure/persistence/mocks/mocks.js --forceExit",
     "database": "npm run migrations && npm run mocks --forceExit"
